# mcp-prompts

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .npmrc.github  .prettierignore  .prettierrc.js  .swcrc  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANED.md  CODEBASE_CLEANUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  DEPLOYMENT_GUIDE.md  DIAGRAMS.md  DOCKER_AWS_TEST_REPORT.md  Dockerfile  Dockerfile.aws  Dockerfile.dev  Dockerfile.file  Dockerfile.mcp  Dockerfile.memory  Dockerfile.postgres  Dockerfile.production  Dockerfile.simple  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  INSTALL.md  ISSUE_125.md  Kompletní oprava ESLint & Prettier problémů - spar.md  Komplexní audit a návrh vylepšení obsahu pro web S.md  MCP_Development_Analysis_and_Recommendations.md  MCP_README.md  MIGRATION.md  (+93 more)
.cursor/: environment.json  mcp.json
.devcontainer/: README.md  devcontainer.json
.github/: mcp-prompts-dashboard.tsx  pull_request_template.md  release.yml
android_app/android/mcp_native_service/: Cargo.toml
android_app/android/mcp_native_service/src/: lib.rs
cdk/: package-lock.json  package.json  pnpm-lock.yaml
data/: sample-prompts.json
docker/: Dockerfile.prod  Dockerfile.setup  Dockerfile.suite  Dockerfile.test  docker-compose.dev.yml  docker-compose.setup.yml  docker-compose.test.yml  docker-compose.yml  startup.sh
docs/: 00-overview-cs.md  00-overview.md  01-quickstart.md  02-configuration.md  03-storage-adapters.md  04-api-reference.md  05-templates-guide.md  06-mcp-integration.md  (+18 more)
(+596 files in other folders)
